objects/SepObject2__c.object
<CustomObject>
    <fields>
        <fullName>SeObject2Field2__c</fullName>
        <label>SeObject2Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SepFeield3__c</fullName>
        <label>SepFeield3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SepObject2Field1__c</fullName>
        <label>SepObject2Field1</label>
        <type>Phone</type>
    </fields>
    <label>SepObject2</label>
    <nameField>
        <label>SepObject2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SepObject2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>